Add a unit test project with NUnit in projects/
Add a bunch of properties I don't fully understand to get the project to compile
Error with TestRunner when launching the tests

--- a/UnitTests.csproj
+++ b/UnitTests.csproj
@@ -2,5 +2,18 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
+    <GodotUseNETFrameworkRefAssemblies>true</GodotUseNETFrameworkRefAssemblies>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="**/*.tscn" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="projects\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="projects\**" />
+  </ItemGroup>
 </Project>
