--- a/projects/Tests/Directory.Build.props
+++ b/projects/Tests/Directory.Build.props
@@ -1,6 +1,5 @@
 <Project>
     <PropertyGroup>
-        <!--See https://github.com/dotnet/msbuild/issues/2245-->
-        <BaseIntermediateOutputPath>../../.mono/xUnitTests/obj/$(Configuration)</BaseIntermediateOutputPath>
-    </PropertyGroup>
+        <!-- See https://github.com/dotnet/msbuild/issues/2245 -->
+        <BaseIntermediateOutputPath>../../.mono/tests/obj/$(Configuration)</BaseIntermediateOutputPath>    </PropertyGroup>
 </Project>
