--- a/projects/Tests/Tests.csproj
+++ b/projects/Tests/Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Godot.NET.Sdk/4.0.0-beta">
+<Project Sdk="Godot.NET.Sdk/4.1.0-dev">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -9,11 +9,13 @@
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <OutputPath>../../.mono/tests/bin/$(Configuration)</OutputPath>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
         <PackageReference Include="NUnit" Version="3.13.2" />
-        <!--        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />-->
-        <!--        <PackageReference Include="coverlet.collector" Version="3.1.0" />-->
     </ItemGroup>
 
     <ItemGroup>
