--- a/projects/Tests/Directory.Build.props
+++ b/projects/Tests/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
     <PropertyGroup>
         <!-- See https://github.com/dotnet/msbuild/issues/2245 -->
-        <BaseIntermediateOutputPath>../../.mono/tests/obj/$(Configuration)</BaseIntermediateOutputPath>    </PropertyGroup>
+        <BaseIntermediateOutputPath>../../.mono/tests/obj/$(Configuration)</BaseIntermediateOutputPath>
+    </PropertyGroup>
 </Project>
